src/test/deca/context/valid/field_int.deca
// Description:
//    Test d'une déclaration de champs entiers
//
// Résultats:
//    OK
//
// Historique:
//    créé le 19/01/2017


class A {
  int x;
  int y = 0;
}
